Edit main notice overflow text issue

--- a/client/src/css/main.module.scss
+++ b/client/src/css/main.module.scss
@@ -209,10 +209,10 @@
                 overflow-x: auto;
                 padding: 10px;
 
-                -ms-overflow-style: none;
-                &::-webkit-scrollbar {
-                  display: none;
-                }
+                // -ms-overflow-style: none;
+                // &::-webkit-scrollbar {
+                //   display: none;
+                // }
                 span {
                   &:first-child {
                     display: block;
